--- a/implementation/NeuralNetworkMNIST/CMakeLists.txt
+++ b/implementation/NeuralNetworkMNIST/CMakeLists.txt
@@ -2,5 +2,5 @@ project(NeuralNetworkMNIST)
 add_executable(${PROJECT_NAME} NeuralNetworkMNIST.cpp)
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 target_link_libraries(${PROJECT_NAME} PRIVATE eigen)
-#target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -pedantic -Werror -Wno-unused-parameter -Wno-unused-variable -pg -g)
+target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -pedantic -Werror -Wno-unused-parameter -Wno-unused-variable -pg -g)
 target_link_options(${PROJECT_NAME} PRIVATE -pg)
