NN test doesn't pass. We are doomed!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,9 @@ include(FetchContent)
 include_directories(${CMAKE_SOURCE_DIR}/src)
 include(external/eigen3.cmake)
 add_subdirectory(implementation)
+
+find_package(OpenMP)
+if (OPENMP_FOUND)
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+endif()
